                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 13-05-2006 changed: samba now allows domain\user type usernames. smb://workgroup;domain\user@computer/share. 
                       workgroup is the workgroup of the computer (only needed for computername to ip lookup), domain is the logon domain of the user
 - 13-05-2006 fixed: files with short extensions could wrongfully get through directory masking.
 - 13-05-2006 added: wma codec to paplayer (builtin).
 - 12-05-2006 changed: removed hardcoded ip's. a DNS server is now required for all internet access in xbmc.
 - 12-05-2006 fixed: my programs always regenerated thumbs.
 - 12-05-2006 fixed: xbmc would crash when video finished playing over SMB.
 - 11-05-2006 changed: default log set to NOTICE instead of ERROR.
 - 07-05-2006 added: daap protocol to add network location dialog.
 - 07-05-2006 added: shoutcast, last.fm, soundtracks and replaytv to add media source.
 - 07-05-2006 changed: moved screenshot-, recordings-, playlists- and trainerpaths from xboxmediacenter.xml.
 - 07-05-2006 fixed: Progressdialog would popup repeatadly when retreiving a large shoutcast directory.
 - 07-05-2006 changed: Rss feed setup to UserData\RssFeeds.xml
                       Keymap.xml to UserData\Keymap.xml
                       System\LCD.xml to UserData\LCD.xml
                       System\Partymode.xml to UserData\Partymode.xml
 - 07-05-2006 changed: Removed old thumb code.
 - 07-05-2006 changed: Background thumb loader for My Programs + changed My Programs + Kai thumb location.